--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,10 +8,12 @@ body {
   font-family: IBMPlexSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: url('/static/background.png');
-  background-position: 50%;
+  background-position: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   color: #373b64;
+  height: 100%;
+  width: 100%;
 }
 
 @font-face {
