--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,18 +1,5 @@
 /** Mobile first development **/
 
-.container {
-  margin-bottom: 14rem /* 224px */;
-}
-
-.main {
-  margin-top: 2.5rem /* 40px */;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 72rem /* 1152px */;
-  padding-left: 1rem /* 16px */;
-  padding-right: 1rem /* 16px */;
-}
-
 .heroImage {
   position: absolute;
   top: 0px;
@@ -50,32 +37,13 @@
   2xl: min-width: 1536px;
 **/
 
-@media (min-width: 640px) {
-  .container {
-    padding-left: 1rem /* 16px */;
-    padding-right: 1rem /* 16px */;
-  }
-
-  .main {
-    margin-top: 3rem /* 48px */;
-    padding-left: 1.5rem /* 24px */;
-    padding-right: 1.5rem /* 24px */;
-  }
+@media (min-width: 640px) {}
   .cardLayout {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 768px) {
-  .container {
-    padding-left: 2.5rem /* 40px */;
-    padding-right: 2.5rem /* 40px */;
-  }
-
-  .main {
-    margin-top: 4rem /* 64px */;
-  }
-
   .heroImage {
     right: 20%;
   }
@@ -86,15 +54,6 @@
 }
 
 @media (min-width: 1024px) {
-  .container {
-    padding-left: 2.5rem /* 40px */;
-    padding-right: 2.5rem /* 40px */;
-  }
-  .main {
-    margin-top: 5rem /* 80px */;
-    padding-left: 2rem /* 32px */;
-    padding-right: 2rem /* 32px */;
-  }
   .heroImage {
     right: 20%;
   }
@@ -104,10 +63,6 @@
 }
 
 @media (min-width: 1280px) {
-  .main {
-    margin-top: 7rem /* 112px */;
-  }
-
   .cardLayout {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
