--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,9 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: IBMPlexSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+  font-family: Pacifico, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: url('/static/background.png');
   background-position: 100%;
@@ -15,41 +13,30 @@ body {
   height: 100%;
   width: 100%;
 }
-
+/* Here is the explanation for the code above:
+1. The @font-face rule is used to define a custom font.
+2. The font-family property specifies the name of the font.
+3. The font-style property specifies whether the font is normal, italic or oblique.
+4. The font-weight property specifies the weight of the font.
+5. The src property specifies the path to the font file.
+6. The format property specifies the format of the font file. */
 @font-face {
-  font-family: 'IBMPlexSans';
+  font-family: 'Pacifico';
   font-style: normal;
   font-weight: 500;
-  src: url(/fonts/IBMPlexSans-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'IBMPlexSans';
-  font-style: normal;
-  font-weight: 600;
-  src: url(/fonts/IBMPlexSans-SemiBold.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'IBMPlexSans';
-  font-style: normal;
-  font-weight: 700;
-  src: url(/fonts/IBMPlexSans-Bold.ttf) format('truetype');
+  src: url(/fonts/Pacifico-Regular.ttf) format('truetype');
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
 }
-
 p {
   font-weight: 500;
 }
-
 h1,
 h2,
 h3,
@@ -62,18 +49,20 @@ pre {
   margin: 0;
 }
 
+@tailwind components;
 button {
   background-color: transparent;
   background-image: none;
   font-weight: 600;
 }
-
 button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
 }
 
 /* glass-morphism */
+@tailwind utilities;
+
 .glass {
   background: hsla(0, 0%, 100%, 0.4);
   -webkit-backdrop-filter: blur(10px);
@@ -84,11 +73,4 @@ button:focus {
 .glass:hover {
   background: hsla(0, 0%, 100%, 0.7);
   border: 1px solid #fff;
-}
-
-:root {
-  --text-purple: rgba(67, 56, 202, 1);
-  --text-purple-dark: rgba(79, 70, 229, 1);
-  --text-black: rgba(17, 24, 39, 1);
-  --text-white-100: rgba(229, 231, 235, 1);
 }
